# UBC_MDS_Capstone_BCStats

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
data/fasttext/: README.md
data/glove/: README.md
data/interim/question2_models/: directory_information
data/interim/subthemes/: directory_information  subtheme_dict.pickle
data/raw/: README.md  directory_information
docs/: Makefile  conf.py  index.rst  make.bat
models/: README.md
notebooks/: README.md  Subtheme_Models.ipynb  final_model.ipynb
references/: BC-Stats_proposal_Text_Analytics.md  MDS_Required_Packages.md  References.md
reports/: .RData  .Rhistory  BCStat_Presentation.Rmd  BCStats_Proposal.Rmd  BCStats_Proposal_Report.Rmd  Final_Presentation.Rmd  Final_Report.Rmd
reports/tables/: baseline_results.csv
reports/tables/subtheme_tables/: cb_valid_eval.csv  cpd_valid_eval.csv  ewc_valid_eval.csv  exec_valid_eval.csv  fwe_valid_eval.csv  oth_valid_eval.csv  re_valid_eval.csv  sp_valid_eval.csv  subtheme_pred_results.csv  sup_valid_eval.csv  sw_valid_eval.csv  (+2 more)
src/data/: README.md  embeddings.py  merge_ministry_pred.py  merge_split_data.py  ministries_data.py  preprocess.py  subset_subtheme_data.py  subthemes.py
src/features/: README.md  tf-idf_vectorizer.py
src/models/: README.md  baseline_model.py  model_evaluate.py  predict_new_comments.py  predict_subtheme.py  predict_theme.py  subtheme_models.py  theme_train.py
src/visualization/: custom_functions.R  data_dictionary.md  dummy.html  eda_plots.Rmd  eda_wordcloud.Rmd  making_logo.R  server.R  ui.R
(+3 files in other folders)
