[tool.poetry]
name = "591_capstone_2020_bc_stats_mds"
version = "0.1.0"
description = "BCStats Capstone 2020"
authors = ["Karanpal Singh <karanpal.singh@alumni.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
